# brackets-app

./: .gitignore  .gitmodules  README.md
src/linux/: CMakeLists.txt  Makefile  README  brackets.desktop  brackets_extensions.js  bracketswindow.vala  browser.vala  frame.vala  main.vala
src/linux/src/: CMakeLists.txt  bracketswindow.vala  config.vala.cmake  main.vala
src/linux/vala/: javascriptcore.vapi
src/mac/: Brackets-Readme.txt  README.TXT  brackets.icns  cef_paths.gypi
src/mac/Brackets.xcodeproj/: project.pbxproj
src/mac/Brackets.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/mac/Resources/: brackets_extensions.js  chrome.pak
src/mac/Resources/am.lproj/: locale.pak
src/mac/Resources/ar.lproj/: locale.pak
src/mac/Resources/bn.lproj/: locale.pak
src/mac/Resources/ca.lproj/: locale.pak
src/mac/Resources/de.lproj/: locale.pak
src/mac/Resources/el.lproj/: locale.pak
src/mac/Resources/en_GB.lproj/: locale.pak
src/mac/Resources/es.lproj/: locale.pak
src/mac/Resources/es_419.lproj/: locale.pak
src/mac/Resources/fa.lproj/: locale.pak
src/mac/Resources/fi.lproj/: locale.pak
src/mac/Resources/fil.lproj/: locale.pak
src/mac/Resources/fr.lproj/: locale.pak
src/mac/Resources/gu.lproj/: locale.pak
src/mac/Resources/he.lproj/: locale.pak
src/mac/Resources/hr.lproj/: locale.pak
src/mac/Resources/hu.lproj/: locale.pak
src/mac/Resources/id.lproj/: locale.pak
src/mac/Resources/it.lproj/: locale.pak
src/mac/Resources/ja.lproj/: locale.pak
src/mac/Resources/kn.lproj/: locale.pak
src/mac/Resources/ko.lproj/: locale.pak
src/mac/Resources/lt.lproj/: locale.pak
src/mac/Resources/lv.lproj/: locale.pak
src/mac/Resources/ml.lproj/: locale.pak
src/mac/Resources/mr.lproj/: locale.pak
src/mac/Resources/nb.lproj/: locale.pak
src/mac/Resources/nl.lproj/: locale.pak
src/mac/Resources/pl.lproj/: locale.pak
src/mac/Resources/pt_BR.lproj/: locale.pak
src/mac/Resources/pt_PT.lproj/: locale.pak
src/mac/Resources/ru.lproj/: locale.pak
src/mac/Resources/sl.lproj/: locale.pak
src/mac/Resources/sv.lproj/: locale.pak
src/mac/Resources/sw.lproj/: locale.pak
src/mac/Resources/ta.lproj/: locale.pak
src/mac/Resources/te.lproj/: locale.pak
src/mac/Resources/th.lproj/: locale.pak
src/mac/Resources/uk.lproj/: locale.pak
src/mac/Resources/vi.lproj/: locale.pak
src/mac/Resources/zh_CN.lproj/: locale.pak
src/mac/Resources/zh_TW.lproj/: locale.pak
src/mac/cefclient/: NSAlert+SynchronousSheet.m  brackets_extensions.h  brackets_extensions.mm  brackets_utils_mac.h  brackets_utils_mac.mm  cefclient.cpp  cefclient_mac.mm  client_handler.cpp  client_handler.h  client_handler_mac.mm  load_error.html
src/mac/cefclient/mac/: Info.plist
src/mac/cefclient/mac/English.lproj/: InfoPlist.strings  MainMenu.xib
src/mac/cefclient/mac/English.lproj/.svn/: all-wcprops  entries
src/mac/cefclient/mac/data/: README
src/mac/include/internal/: cef_build.h
src/mac/include/internal/npapi/: README-TRANSFER.txt  basictypes.h  build_config.h
src/mac/tests/: filetests.html
src/mac/tests/cant_write_here/: readme.txt
src/mac/tests/files/: write_test.txt
src/mac/tools/: README-TRANSFER.txt  change_mach_o_flags.py
src/node/: package.json  proxy.js  webserver.js
src/win/: Brackets.sln  README.txt  cef_paths.gypi  cefclient.vcproj  cefclient.vcxproj  cefclient.vcxproj.filters  cefclient2005.sln  cefclient2008.sln  libcef_dll_wrapper.vcproj  libcef_dll_wrapper.vcxproj  libcef_dll_wrapper.vcxproj.filters
src/win/cefclient/: Resource.h  brackets_extensions.cpp  brackets_extensions.h  cefclient.rc  cefclient_win.cpp  client_handler.cpp  client_handler.h  client_handler_win.cpp  clientplugin.cpp  plugin_test.cpp
src/win/cefclient/res/: brackets_extensions.js  load_error.html  modaldialog.html  modalmain.html
